# python-slugify-etna

./: .gitignore  BUGS.md  TASKS.md  etna.toml  steps.json
etna/: pyproject.toml
etna/etna_runner/: __init__.py  _result.py  properties.py  runner.py  strategies.py  witnesses.py
etna/tests/: test_witnesses.py
patches/: normalize_accents_twice_e52c35e3_1.patch  regex_pattern_cli_ignored_7edf477f_1.patch  stopwords_with_custom_separator_a1543fe0_1.patch  uppercase_pre_translations_a243ccdc_1.patch
slugify/: __main__.py
